add patch test
